many mobile style's bugs fixed

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         </div>
     </div>
     <div class="universities">
-        <div class="universities__icons desktop__hidden" style="justify-content: start; margin-bottom: 32px">
+        <div class="universities__icons desktop__hidden" style="margin-bottom: 32px">
             <img style="z-index: 8;" class="universities__icon" src="images/universities/mgu.svg" alt="МГУ">
             <img style="z-index: 7;" class="universities__icon" src="images/universities/baumanka.svg" alt="Бауманка">
             <img style="z-index: 6;" class="universities__icon" src="images/universities/mfti.svg" alt="МФТИ">
@@ -1088,7 +1088,7 @@
             </div>
             <div>
                 <div style="display: flex; flex-wrap: wrap;">
-                    <input class="questions__tel" type="tel" placeholder="+7">
+                    <input class="questions__tel" type="tel" placeholder="+7" maxlength="17">
                     <select class="questions__time">
                         <option disabled selected hidden>Время звонка</option>
                         <option>9:00</option>
